--- a/lib/srv/sample/controller.html
+++ b/lib/srv/sample/controller.html
@@ -7,12 +7,16 @@
     <script src="kale.js"></script>
 </head>
 <body style="padding:25%">
-    <div class="width:100%;height:100%;border-width:5px;" id="touchable">This is the big touchable div.</div>
+    <div class="float:left;width:50%;font-size:20px;" id="shoot">Send event, Shoot.</div>
+    <div class="width:50%;font-size:20px;" id="foo">Send event Foo.</div>
 </body>
 <script>
-    document.getElementById('touchable').addEventListener('touchstart', function (ev) {
-        var q = new Kale.queue({baseurl: 'http://192.168.1.10:8889/', queueid: 1});
-        q.enqueue('event');
+    var q = new Kale.queue({ baseurl: 'http://192.168.1.10:8889/', queueid: 1 });
+    document.getElementById('shoot').addEventListener('touchstart', function (ev) {
+        q.enqueue('shoot');
+    });
+    document.getElementById('foo').addEventListener('touchstart', function (ev) {
+        q.enqueue('foo');
     });
 </script>
 </html>
