--- a/static/controller.html
+++ b/static/controller.html
@@ -11,7 +11,8 @@
     <div class="width:50%;font-size:20px;" id="foo">Send event Foo.</div>
 </body>
 <script>
-    var q = new Kale.queue({ baseurl: 'http://192.168.1.10:8889/', queueid: 1 });
+    var q = new Kale.queue({ baseurl: window.location.origin + '/', queueid: window.location.search.split('=')[1] });
+    q.enqueue('linked');
     document.getElementById('shoot').addEventListener('touchstart', function (ev) {
         q.enqueue('shoot');
     });
