--- a/samples/ab/controller.html
+++ b/samples/ab/controller.html
@@ -7,17 +7,17 @@
     <script src="kale.js"></script>
 </head>
 <body style="padding:25%">
-    <div class="float:left;width:50%;font-size:20px;" id="shoot">Send event, Shoot.</div>
-    <div class="width:50%;font-size:20px;" id="foo">Send event Foo.</div>
+    <button style="width:90%;" type="button" id="a">A</button>
+    <button style="width:90%;" type="button" id="b">B</button>
 </body>
 <script>
     var q = new Kale.queue({ baseUrl: window.location.origin + '/', queueid: window.location.search.split('=')[1] });
     q.enqueue({ name: 'linked' });
-    document.getElementById('shoot').addEventListener('touchstart', function (ev) {
-        q.enqueue({ name: 'a' });
+    document.getElementById('a').addEventListener('touchstart', function (ev) {
+        q.enqueue({ name: 'A' });
     });
-    document.getElementById('foo').addEventListener('touchstart', function (ev) {
-        q.enqueue({ name: 'a' });
+    document.getElementById('b').addEventListener('touchstart', function (ev) {
+        q.enqueue({ name: 'B' });
     });
 </script>
 </html>
