--- a/samples/ab/controller.html
+++ b/samples/ab/controller.html
@@ -1,43 +1,44 @@
-﻿<!DOCTYPE html> 
-<html> 
-<head> 
-	<title>Page Title</title> 
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
-	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
-</head> 
-<body> 
-
-<div data-role="page">
-
-	<div data-role="header">
-		<h1>AB Sample</h1>
-	</div><!-- /header -->
-
-	<div data-role="content">	
-		<a href="#" data-role="button">A</a>
-        <a href="#" data-role="button">B</a>
-	</div><!-- /content -->
-
-	<div data-role="footer">
-		<h4>Page Footer</h4>
-	</div><!-- /footer -->
-</div><!-- /page -->
-
-</body>
+﻿<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <title>
+        </title>
+        <link rel="stylesheet" href="https://s3.amazonaws.com/codiqa-cdn/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+        <link rel="stylesheet" href="my.css" />
+        <script src="https://s3.amazonaws.com/codiqa-cdn/jquery-1.7.2.min.js">
+        </script>
+        <script src="https://s3.amazonaws.com/codiqa-cdn/mobile/1.2.0/jquery.mobile-1.2.0.min.js">
+        </script>
+        <script src="my.js">
+        </script>
+        <!-- User-generated css -->
+        <style>
+        </style>
+        <!-- User-generated js -->
+        <script>
+                $(function () {
+                    var q = new Kale.queue({ baseUrl: window.location.origin + '/', queueid: window.location.search.split('=')[1] });
+                    q.enqueue({ name: 'linked' });
+                    $('#a').live('tap', function (ev) {
+                        q.enqueue({ name: 'A' });
+                    });
+                    $('#b').live('tap', function (ev) {
+                        q.enqueue({ name: 'B' });
+                    });
+                });
+        </script>
+    </head>
+    <body>
+        <!-- Home -->
+        <div data-role="page" id="page1">
+            <div data-role="content">
+                <a href="#" data-role="button">A</a>
+                <a href="#" data-role="button">B</a>
+            </div>
+        </div>
+    </body>
 </html>
-<script>
-    $(document).bind('pageinit', function () {
-        var q = new Kale.queue({ baseUrl: window.location.origin + '/', queueid: window.location.search.split('=')[1] });
-        q.enqueue({ name: 'linked' });
-        $('#a').live('tap', function (ev) {
-            q.enqueue({ name: 'A' });
-        });
-        $('#b').live('tap', function (ev) {
-            q.enqueue({ name: 'B' });
-        });
-    });
-</script>
